[gd_scene load_steps=16 format=3 uid="uid://dfesb1kbd4d35"]

[ext_resource type="Script" path="res://Player/PlayerTest.gd" id="1_20tws"]

[sub_resource type="BoxMesh" id="BoxMesh_wml4e"]
size = Vector3(2, 2, 2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b827x"]
radius = 1.0

[sub_resource type="Animation" id="Animation_rfsis"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 0.5, 1, 0, 0.1, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3t7p7"]
_data = {
"new_animation": SubResource("Animation_rfsis")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t4g88"]
animation = &"new_animation"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ijabr"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6mnum"]
states/Idle/node = SubResource("AnimationNodeAnimation_t4g88")
states/Idle/position = Vector2(423, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_ijabr")]

[sub_resource type="BoxShape3D" id="BoxShape3D_2rhgy"]
size = Vector3(0.1, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_qpuui"]
size = Vector3(2, 0.1, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_u7xq5"]
radius = 1.82538

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a0527"]
albedo_color = Color(0, 0.501961, 0.0431373, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a7bid"]
lifetime_randomness = 1.0
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1.5)
direction = Vector3(0, 1, 0)
gravity = Vector3(0, -10, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
angle_min = -720.0
angle_max = 720.0
scale_min = 0.5
color = Color(0, 0.713726, 0.192157, 1)
turbulence_noise_strength = 0.5
turbulence_noise_scale = 0.2
sub_emitter_keep_velocity = true
collision_mode = 1
collision_friction = 0.1
collision_bounce = 0.28
collision_use_scale = true

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_a1oa1"]

[sub_resource type="Skin" id="Skin_3ldfs"]
bind_count = 1
bind/0/name = &""
bind/0/bone = -1
bind/0/pose = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_20tws")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_wml4e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_b827x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3t7p7")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6mnum")
anim_player = NodePath("../AnimationPlayer")

[node name="ColisionperuanaIzq" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.05, 0, 0)
collision_layer = 2
collision_mask = 2
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
can_sleep = false
freeze = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ColisionperuanaIzq"]
shape = SubResource("BoxShape3D_2rhgy")

[node name="ColisionperuanaDer2" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, 0)
collision_layer = 2
collision_mask = 2
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
can_sleep = false
freeze = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ColisionperuanaDer2"]
shape = SubResource("BoxShape3D_2rhgy")

[node name="ColisionArriba" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 2
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
can_sleep = false
freeze = true
linear_velocity = Vector3(-5, 5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ColisionArriba"]
shape = SubResource("BoxShape3D_qpuui")

[node name="ObjectDetect" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ObjectDetect"]
shape = SubResource("SphereShape3D_u7xq5")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.715751, 0)
layers = 3
sorting_use_aabb_center = false
material_overlay = SubResource("StandardMaterial3D_a0527")
amount = 40
sub_emitter = NodePath(".")
lifetime = 3.0
fixed_fps = 60
collision_base_size = 0.5
visibility_aabb = AABB(-77.6112, -20.6767, -25.9344, 155.222, 41.3534, 51.8688)
process_material = SubResource("ParticleProcessMaterial_a7bid")
draw_pass_1 = SubResource("TubeTrailMesh_a1oa1")
draw_skin = SubResource("Skin_3ldfs")

[node name="GPUParticlesCollisionSphere3D" type="GPUParticlesCollisionSphere3D" parent="."]
layers = 3
radius = 0.997958

[connection signal="body_entered" from="ObjectDetect" to="." method="_on_object_detect_body_entered"]
[connection signal="body_exited" from="ObjectDetect" to="." method="_on_object_detect_body_exited"]
